--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,6 +7,28 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+  <div *ngIf="!beaconData; else beaconFound">
+    <ion-card>
+      <ion-card-header>
+        Start Scan
+      </ion-card-header>
+      <ion-card-content>
+        <p>Click here</p>
+        <ion-button (click)="startScanningForBeacons()"> Start scan</ion-button>
+      </ion-card-content>
+    </ion-card>
+  </div>
+  <ng-template #beaconFound>
+    <ion-card>
+      <ion-card-header>
+        Beacon Found
+      </ion-card-header>
+      <ion-card-content>
+        <ion-list>
+          <ion-item> {{beaconData.address}}</ion-item>
+          <ion-item> {{beaconData.rssi}}</ion-item>
+        </ion-list>
+      </ion-card-content>
+    </ion-card>
+  </ng-template>
 </ion-content>
